namespace Calculation.Notation;

public enum NotationType
{
    Infix,
    Prefix,
    Postfix
}